--- a/Azure_IABRS/IABRS/Views/SysAdmin/ListRoles.cshtml
+++ b/Azure_IABRS/IABRS/Views/SysAdmin/ListRoles.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<IdentityRole>
-
+@section Scripts {
+    <script src="~/js/CustomScript.js"></script>
+}
 
 @{
     ViewBag.Title = "All Roles";
@@ -22,9 +24,25 @@
                 <h5 class="card-title">@role.Name</h5>
             </div>
             <div class="card-footer">
-                <a class="btn btn-primary" asp-action="EditRole" asp-controller="sysadmin"
-                    asp-route-id="@role.Id">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
+
+                    <a class="btn btn-primary" asp-action="EditRole" asp-controller="sysadmin"
+                       asp-route-id="@role.Id">Edit</a>
+                    <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                        <span>Are you sure you want to delete?</span>
+                        <button type="submit" class="btn btn-danger">Yes</button>
+                        <a  class="btn btn-primary"
+                           onclick="confirmDelete('@role.Id', false)">No</a>
+                    </span>
+
+                    <span id="deleteSpan_@role.Id">
+                        <a  class="btn btn-danger"
+                           onclick="confirmDelete('@role.Id', true)">Delete</a>
+                    </span>
+                </form>
+
+
+               
             </div>
         </div>
     }
