--- a/Azure_IABRS/IABRS/Views/SysAdmin/ListUsers.cshtml
+++ b/Azure_IABRS/IABRS/Views/SysAdmin/ListUsers.cshtml
@@ -1,6 +1,10 @@
 ﻿
 @model IEnumerable<User>
 
+@section Scripts {
+    <script src="~/js/CustomScript.js"></script>
+}
+
 @{
     ViewBag.Title = "All Users";
 }
@@ -24,8 +28,22 @@
                 <h5 class="card-title">@user.UserName</h5>
             </div>
             <div class="card-footer">
-                <a href="#" class="btn btn-danger">Edit</a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
+                    <a asp-action="EditUser" asp-controller="sysadmin"
+                       asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                    <span id="confirmDeleteSpan_@user.Id" style="display:none">
+                        <span>Are you sure you want to delete?</span>
+                        <button type="submit" class="btn btn-danger">Yes</button>
+                        <a  class="btn btn-primary"
+                           onclick="confirmDelete('@user.Id', false)">No</a>
+                    </span>
+
+                    <span id="deleteSpan_@user.Id">
+                        <a  class="btn btn-danger"
+                           onclick="confirmDelete('@user.Id', true)">Delete</a>
+                    </span>
+                </form>
+
             </div>
         </div>
     }
