--- a/Azure_IABRS/IABRS/Views/Account/Login.cshtml
+++ b/Azure_IABRS/IABRS/Views/Account/Login.cshtml
@@ -4,10 +4,12 @@
     ViewBag.Title = "User Login";
 }
 
-<h1>User Login</h1>
+
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
+        <h1>IABRS Account Login</h1>
+        <hr />
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -30,5 +32,35 @@
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
+    </div>
+
+    <div class="col-md-6">
+        <h1>External Account Login</h1>
+        <hr />
+        @{ 
+            if (Model.ExternalLogins == null)
+            {
+
+            }
+            if (Model.ExternalLogins == null || Model.ExternalLogins.Count <= 0)
+            {
+                <div>No External Logins Configured</div>
+            }
+            else
+            {
+                <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                    <div>
+                        @foreach (var prov in Model.ExternalLogins)
+                        {
+                            <button type="submit" class="btn btn-primary"
+                                    name="prov" value="@prov.Name"
+                                    title="Login using your @prov.DisplayName account">
+                                @prov.DisplayName
+                            </button>
+                        }
+                    </div>
+                </form>
+            }
+        }
     </div>
 </div>
