some syntax errors fixed

--- a/Azure_IABRS/IABRS/Views/Home/BuyBooks.cshtml
+++ b/Azure_IABRS/IABRS/Views/Home/BuyBooks.cshtml
@@ -45,7 +45,7 @@
         <tr>
             <td>@item.Book.Title</td>
             <td>@item.Book.Author</td>
-            <td>@item.ID</td>
+            <td>@item.Id</td>
             <td><input type="button" value="Put Up For Sale" /></td>
         </tr>
     }
