Added header comments & some more html in index and profile page

--- a/Azure_IABRS/IABRS/Views/Home/BuyBooks.cshtml
+++ b/Azure_IABRS/IABRS/Views/Home/BuyBooks.cshtml
@@ -1,5 +1,7 @@
 ﻿@using IABRS.Models
 
+<!--File: BuyBooks.cshtml
+    Purpose: This is where the user can see the list of books for sale, and information about them and the option to purchase them-->
 
 @{
     ViewData["Title"] = "BuyBooks";
