--- a/Azure_IABRS/IABRS/Views/Home/SellBooks.cshtml
+++ b/Azure_IABRS/IABRS/Views/Home/SellBooks.cshtml
@@ -1,4 +1,6 @@
 ﻿@using IABRS.Models
+<!--File: SellBooks.cshtml
+    Purpose: This is where the user can see information about what books they own and gives them the option to sell them-->
 
 
 @{
@@ -48,6 +50,6 @@
         </tr>
     }
 
-    
+
 </table>
 
