--- a/Azure_IABRS/IABRS/Views/Home/ShoppingCart.cshtml
+++ b/Azure_IABRS/IABRS/Views/Home/ShoppingCart.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using IABRS.Models
+
+<!--File: ShoppingCart.cshtml
+    Purpose: This is the user's shopping cart, showing information about any books in their cart-->
+
+
 @{
     ViewData["Title"] = "ShoppingCart";
 }
