added institution admin list all users in institution

--- a/Azure_IABRS/IABRS/Views/Home/YourProfile.cshtml
+++ b/Azure_IABRS/IABRS/Views/Home/YourProfile.cshtml
@@ -13,7 +13,7 @@
 
 }
 
-<h1>@Userdata.Fname's Profile</h1>
+<h1>@Userdata.UserName's Profile</h1>
 
 <div class="text-center">
 
@@ -33,8 +33,8 @@
 
 </ul>
 <div class="text-left">
-    <h4>Name: @Userdata.Fname &nbsp;   @Userdata.Mname &nbsp;   @Userdata.Lname</h4>
-    <h4>Username: @Userdata.Username</h4>
+    <!--<h4>Name: Userdata.Fname &nbsp;   Userdata.Mname &nbsp;   Userdata.Lname</h4>-->
+    <h4>Username: @Userdata.UserName</h4>
 </div>
 
 <!--Display the courses that the user is in-->
