--- a/Azure_IABRS/IABRS/Views/Home/Index.cshtml
+++ b/Azure_IABRS/IABRS/Views/Home/Index.cshtml
@@ -15,6 +15,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to @InstitutionData.Name's book store</h1>
+    @{ if (InstitutionData == null)
+        {
+            <h1 class="display-4">Welcome to IABRS please register or login to contiune</h1>
+        }
+        else
+        {
+            <h1 class="display-4">Welcome to @InstitutionData.Name's book store</h1>
+        }
+    }
+
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
