--- a/Azure_IABRS/IABRS/Views/Shared/_Layout.cshtml
+++ b/Azure_IABRS/IABRS/Views/Shared/_Layout.cshtml
@@ -70,6 +70,23 @@
                                        asp-action="ListUsers">Users</a>
                                     <a class="dropdown-item" asp-controller="SysAdmin"
                                        asp-action="ListRoles">Roles</a>
+                                    <a class="dropdown-item" asp-controller="SysAdmin"
+                                       asp-action="ListInstitutions">Institutions</a>
+                                </div>
+                            </li>
+                        }
+                        @if (signInManager.IsSignedIn(User) && User.IsInRole("InstituteAdmin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Manage
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" asp-controller="InstitutAdmin"
+                                       asp-action="ListUsers">Users</a>
+                                    <a class="dropdown-item" asp-controller="InstitutAdmin"
+                                       asp-action="ListRoles">Roles</a>
                                 </div>
                             </li>
                         }
