--- a/Azure_IABRS/IABRS/Views/SysAdmin/CreateRole.cshtml
+++ b/Azure_IABRS/IABRS/Views/SysAdmin/CreateRole.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Create New Role";
 }
 
-<h1>User Registration</h1>
+<h1>Create New Role</h1>
 
 <div class="row">
     <div class="col-md-12">
