--- a/Azure_IABRS/IABRS/Views/SysAdmin/EditUser.cshtml
+++ b/Azure_IABRS/IABRS/Views/SysAdmin/EditUser.cshtml
@@ -33,7 +33,15 @@
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Update</button>
-            <a asp-action="ListUsers" class="btn btn-primary">Cancel</a>
+            @if (User.IsInRole("InstituteAdmin"))
+            {
+                <a asp-action="ListUsers" asp-controller="InstitutAdmin" class="btn btn-primary">Cancel</a>
+            }
+            else
+            {
+                <a asp-action="ListUsers" class="btn btn-primary">Cancel</a>
+            }
+
         </div>
     </div>
 
